// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.emotion-2 {
  outline: 0;
  background: #f2f2f7;
  border-radius: 0.75rem;
  padding: calc(0.25rem - 1px) 0.25rem;
  display: inline-block;
  width: 3rem;
  line-height: 0;
  border: 1px solid #e6e6e6;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.emotion-1 {
  background: #ffffff;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  -webkit-transition: all .2s;
  transition: all .2s;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.14);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-3:hover .emotion-2 {
  cursor: pointer;
  border-color: #b3b3b3;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: -1;
}

.emotion-0:checked + .emotion-2 {
  background: #056DFF;
  border-color: #056DFF;
}

.emotion-0:checked + .emotion-2:hover {
  border-color: #056DFF;
}

.emotion-0:checked + .emotion-2 > .emotion-1 {
  -webkit-transform: translateX(calc(1.5rem - 1px));
  -ms-transform: translateX(calc(1.5rem - 1px));
  transform: translateX(calc(1.5rem - 1px));
}

.emotion-0:focus + .emotion-2 {
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:disabled + .emotion-2 {
  opacity: 0.4;
  cursor: not-allowed;
}

<label
  class="emotion-3"
>
  <input
    class="emotion-0"
    type="checkbox"
  />
  <div
    class="emotion-2"
  >
    <span
      class="emotion-1"
    />
  </div>
</label>
`;

exports[`should render correctly 2`] = `
.emotion-2 {
  outline: 0;
  background: #f2f2f7;
  border-radius: 0.75rem;
  padding: calc(0.25rem - 1px) 0.25rem;
  display: inline-block;
  width: 3rem;
  line-height: 0;
  border: 1px solid #e6e6e6;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.emotion-1 {
  background: #ffffff;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  -webkit-transition: all .2s;
  transition: all .2s;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.14);
}

.emotion-3 {
  margin-left: 0.5rem;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-4:hover .emotion-2 {
  cursor: pointer;
  border-color: #b3b3b3;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: -1;
}

.emotion-0:checked + .emotion-2 {
  background: #056DFF;
  border-color: #056DFF;
}

.emotion-0:checked + .emotion-2:hover {
  border-color: #056DFF;
}

.emotion-0:checked + .emotion-2 > .emotion-1 {
  -webkit-transform: translateX(calc(1.5rem - 1px));
  -ms-transform: translateX(calc(1.5rem - 1px));
  transform: translateX(calc(1.5rem - 1px));
}

.emotion-0:focus + .emotion-2 {
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:disabled + .emotion-2 {
  opacity: 0.4;
  cursor: not-allowed;
}

<label
  class="emotion-4"
>
  <input
    class="emotion-0"
    label="Active"
    type="checkbox"
    value="true"
  />
  <div
    class="emotion-2"
  >
    <span
      class="emotion-1"
    />
  </div>
  <span
    class="emotion-3"
  >
    Active
  </span>
</label>
`;

exports[`should render correctly 3`] = `
.emotion-2 {
  outline: 0;
  background: #f2f2f7;
  border-radius: 0.75rem;
  padding: calc(0.25rem - 1px) 0.25rem;
  display: inline-block;
  width: 3rem;
  line-height: 0;
  border: 1px solid #e6e6e6;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.emotion-1 {
  background: #ffffff;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  -webkit-transition: all .2s;
  transition: all .2s;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.14);
}

.emotion-3 {
  margin-left: 0.5rem;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-4:hover .emotion-2 {
  cursor: pointer;
  border-color: #b3b3b3;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: -1;
}

.emotion-0:checked + .emotion-2 {
  background: #056DFF;
  border-color: #056DFF;
}

.emotion-0:checked + .emotion-2:hover {
  border-color: #056DFF;
}

.emotion-0:checked + .emotion-2 > .emotion-1 {
  -webkit-transform: translateX(calc(1.5rem - 1px));
  -ms-transform: translateX(calc(1.5rem - 1px));
  transform: translateX(calc(1.5rem - 1px));
}

.emotion-0:focus + .emotion-2 {
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:disabled + .emotion-2 {
  opacity: 0.4;
  cursor: not-allowed;
}

<label
  class="emotion-4"
>
  <input
    class="emotion-0"
    disabled=""
    label="Disabled"
    type="checkbox"
    value="true"
  />
  <div
    class="emotion-2"
  >
    <span
      class="emotion-1"
    />
  </div>
  <span
    class="emotion-3"
  >
    Disabled
  </span>
</label>
`;
